--- a/index.html
+++ b/index.html
@@ -1,11 +1,36 @@
 <!DOCTYPE html>
-<html >
-<head>
+<html>
+  <head>
     <title>huddle</title>
-    <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />">
-</head>
-<body>
-    
-</body>
+    <link rel="stylesheet" href="css/main.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+      integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+  </head>
+  <body>
+    <div class="section1">
+        <div class="container">
+          <div class="navbar">
+            <img src="img/logo.svg" alt="huddle" />
+            <input type="button" value="Try It Free" />
+          </div>
+          <div class="txt">
+            <h2>Build the community your fans will love</h2>
+            <p>
+              Huddle re-imagines the way we build communities. You have a voice,
+              but so does your audience. Create connections with yours users as
+              you engage in genuine discussion.
+            </p>
+              <input type="button" class="btn2" value="Get Started For Free" />
+          </div>
+        <div class="img1">
+          <img src="img/illustration-mockups.svg" alt="mockups" />
+        </div>
+      </div>
+      </div>
+  </body>
 </html>
