--- a/index.html
+++ b/index.html
@@ -13,24 +13,76 @@
   </head>
   <body>
     <div class="section1">
-        <div class="container">
-          <div class="navbar">
-            <img src="img/logo.svg" alt="huddle" />
-            <input type="button" value="Try It Free" />
-          </div>
-          <div class="txt">
-            <h2>Build the community your fans will love</h2>
-            <p>
-              Huddle re-imagines the way we build communities. You have a voice,
-              but so does your audience. Create connections with yours users as
-              you engage in genuine discussion.
-            </p>
-              <input type="button" class="btn2" value="Get Started For Free" />
-          </div>
+      <div class="container">
+        <div class="navbar">
+          <img src="img/logo.svg" alt="huddle" />
+          <input type="button" value="Try It Free" />
+        </div>
+        <div class="txt">
+          <h2>Build the community your fans will love</h2>
+          <p>
+            Huddle re-imagines the way we build communities. You have a voice,
+            but so does your audience. Create connections with yours users as
+            you engage in genuine discussion.
+          </p>
+          <input type="button" class="btn2" value="Get Started For Free" />
+        </div>
         <div class="img1">
           <img src="img/illustration-mockups.svg" alt="mockups" />
         </div>
       </div>
+    </div>
+    <div class="section2">
+      <div class="container">
+        <div class="div">
+          <div class="cont">
+            <div class="txt">
+              <h3>Grow Together</h3>
+              <p>
+                Generate meaning discussions with your audience and build a
+                strong, loyal community. Think of the insightful conversations
+                you miss out on with a feedback form.
+              </p>
+            </div>
+            <div class="img">
+              <img src="img/illustration-grow-together.svg" alt="grow" />
+            </div>
+          </div>
+        </div>
+        <div class="div">
+          <div class="cont">
+            <div class="img">
+              <img
+                src="img/illustration-flowing-conversation.svg"
+                alt="flowing"
+              />
+            </div>
+            <div class="txt">
+              <h3>Flowing Conversations</h3>
+              <p>
+                You wouldn't paginate a conversation in real life, so why do it
+                online? Our threads have just-in-time loading for a more natural
+                flow.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="div">
+          <div class="cont">
+            <div class="txt">
+              <h3>Your Users</h3>
+              <p>
+                It takes no time at all to integrate Huddle with your app's
+                authentication solution. The means, once signed in to your app,
+                your users can start chatting immediately.
+              </p>
+            </div>
+            <div class="img">
+              <img src="img/illustration-your-users.svg" alt="users" />
+            </div>
+          </div>
+        </div>
       </div>
+    </div>
   </body>
 </html>
