--- a/index.html
+++ b/index.html
@@ -84,5 +84,36 @@
         </div>
       </div>
     </div>
+    <div class="section3">
+      <div class="cont1">
+        <h2>Ready To Build Your Community?</h2>
+        <input type="button" value="Get Started For Free"/>
+    </div>
+      <div class="container">
+        <div class="contact">
+          <img src="img/logo.svg" alt="logo" />
+          <p class="location">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolores
+            nam perferendis autem unde quibusdam pariatur a, laborum
+            perspiciatis est.
+          </p>
+          <p class="phone">+1-543-123-4567</p>
+          <p class="email">example@huddle.com</p>
+        </div>
+        <div class="list">
+            <li><a href="#">About us</a></li>
+            <li><a href="#">Career</a></li>
+            <li><a href="#">What We Do</a></li>
+            <li><a href="#">Blog</a></li>
+            <li><a href="#">FAQ</a></li>
+            <li><a href="#">Contact us</a></li>
+        </div>
+        <div class="cont">
+          <a href="#"><i class="fa-brands fa-facebook"></i></a>
+          <a href="#"><i class="fa-brands fa-twitter"></i></a>
+          <a href="#"><i class="fa-brands fa-instagram"></i></a>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
