--- a/index.html
+++ b/index.html
@@ -92,13 +92,13 @@
       <div class="container">
         <div class="contact">
           <img src="img/logo.svg" alt="logo" />
-          <p class="location">
+          <a href="#"><p class="location">
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolores
             nam perferendis autem unde quibusdam pariatur a, laborum
             perspiciatis est.
-          </p>
-          <p class="phone">+1-543-123-4567</p>
-          <p class="email">example@huddle.com</p>
+          </p></a>
+          <a href="#"><p class="phone">+1-543-123-4567</p></a>
+          <a href="#"><p class="email">example@huddle.com</p></a>
         </div>
         <div class="list">
             <li><a href="#">About us</a></li>
