add logo icon in html code

--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
 <html>
   <head>
     <title>huddle</title>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./img/iconn.png"
+    />
     <link rel="stylesheet" href="css/main.css" />
     <link
       rel="stylesheet"
